[Edit] Book 내용 타이틀 정리

--- a/docs/Book/리팩터링 2판/리팩터링.md
+++ b/docs/Book/리팩터링 2판/리팩터링.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Refactoring
+title: 리팩터링 2판
 parent: Book
 nav_order: 1
 has_children: true
 permalink: docs/book/리팩터링 2판
 ---
 
-# Python
+# 리팩터링 2판
